--- a/index.html
+++ b/index.html
@@ -5,312 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Трекер игры">
     <title>Трекер настольной игры</title>
-
-    <!-- Блокируем вертикальную ориентацию -->
-    <style>
-        @media screen and (orientation: portrait) {
-            body::before {
-                content: "Поверните устройство в горизонтальный режим";
-                position: fixed;
-                top: 0; left: 0; right: 0; bottom: 0;
-                background: #000;
-                color: #fff;
-                font-size: 28px;
-                font-weight: bold;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                text-align: center;
-                padding: 20px;
-                z-index: 9999;
-                font-family: sans-serif;
-            }
-        }
-
-        /* === ОСНОВНЫЕ СТИЛИ === */
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        html, body {
-            height: 100vh;
-            height: 100dvh;
-            margin: 0;
-            padding: 0;
-            overflow: hidden !important;
-            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #ffffff;
-            -webkit-text-size-adjust: 100%;
-        }
-
-        .container {
-            display: flex;
-            height: 100vh;
-            height: 100dvh;
-            width: 100vw;
-            overflow: hidden;
-        }
-
-        .sidebar {
-            width: 100px;
-            background: rgba(15,15,15,0.95);
-            border-right: 1px solid #ffffff;
-            box-shadow: 2px 0 10px rgba(255,255,255,0.2);
-            display: flex;
-            flex-direction: column;
-        }
-
-        @media screen and (min-width: 1600px) { .sidebar { width: 120px; } }
-
-        .sidebar-header {
-            padding: 25px;
-            background: linear-gradient(135deg, #1a1a1a 0%, #2a2a2a 100%);
-            border-bottom: 2px solid #ffffff;
-            text-align: center;
-        }
-
-        .sidebar-header h1 { font-size: 40px; margin: 0; }
-        @media screen and (min-width: 1600px) {
-            .sidebar-header { padding: 30px; }
-            .sidebar-header h1 { font-size: 50px; }
-        }
-
-        .tab-buttons { padding: 10px; display: flex; flex-direction: column; }
-        .tab-btn {
-            padding: 20px 15px;
-            margin: 5px;
-            border: 1px solid #ffffff;
-            background: #1a1a1a;
-            color: #ffffff;
-            cursor: pointer;
-            border-radius: 8px;
-            font-size: 32px;
-            transition: all 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        @media screen and (min-width: 1600px) {
-            .tab-btn { padding: 25px 20px; font-size: 42px; margin: 8px; }
-        }
-
-        .tab-btn:hover { background: #2a2a2a; box-shadow: 0 0 10px rgba(255,255,255,0.3); }
-        .tab-btn.active {
-            background: linear-gradient(135deg, #2a2a2a 0%, #3a3a3a 100%);
-            box-shadow: 0 0 15px rgba(255,255,255,0.5);
-        }
-
-        .main-content {
-            flex: 1;
-            padding: 30px;
-            overflow-y: auto;
-            overflow-x: hidden;
-            -webkit-overflow-scrolling: touch;
-            height: 100%;
-        }
-
-        @media screen and (min-width: 1600px) { .main-content { padding: 40px; } }
-
-        .tab-content { display: none; }
-        .tab-content.active { display: block; }
-
-        .add-player-btn {
-            padding: 15px 30px;
-            background: linear-gradient(135deg, #2a2a2a 0%, #3a3a3a 100%);
-            color: #fff;
-            border: 2px solid #fff;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 18px;
-            margin-bottom: 20px;
-            font-weight: bold;
-            transition: all 0.3s;
-        }
-
-        .add-player-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 0 20px rgba(255,255,255,0.5);
-        }
-
-        .player-card {
-            background: linear-gradient(135deg, #0d0d0d 0%, #1a1a1a 100%);
-            border-radius: 12px;
-            padding: 25px;
-            margin-bottom: 25px;
-            border: 1px solid #ffffff;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.5);
-        }
-
-        .player-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-
-        .player-name {
-            flex: 1;
-            margin-right: 15px;
-            font-size: 24px;
-            font-weight: bold;
-            background: transparent;
-            border: none;
-            border-bottom: 2px solid transparent;
-            color: #fff;
-            padding: 5px;
-            transition: all 0.3s;
-        }
-
-        .player-name:hover { border-bottom: 2px solid #fff; }
-        .player-name:focus { outline: none; border-bottom: 2px solid #fff; background: rgba(255,255,255,0.1); }
-
-        .delete-btn {
-            background: #cc0000;
-            color: white;
-            border: 1px solid #ff0000;
-            padding: 10px 20px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .delete-btn:hover { background: #ff0000; box-shadow: 0 0 10px rgba(255,0,0,0.5); }
-
-        .counters {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 20px;
-            margin-top: 15px;
-        }
-
-        .counter {
-            background: #0a0a0a;
-            padding: 18px;
-            border-radius: 8px;
-            text-align: center;
-            border: 1px solid #ffffff;
-        }
-
-        .counter-label {
-            font-size: 16px;
-            margin-bottom: 10px;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .counter-label.yellow { color: #ffff00; text-shadow: 0 0 10px #ffff00, 0 0 20px #ffff00; }
-        .counter-label.green  { color: #00ff00; text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00; }
-        .counter-label.red    { color: #ff0000; text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000; }
-        .counter-label.blue   { color: #00ffff; text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff; }
-
-        .counter-controls {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .counter-btn {
-            width: 42px; height: 42px;
-            border: 1px solid #fff;
-            background: #2a2a2a;
-            color: #fff;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 22px;
-            transition: all 0.2s;
-        }
-
-        .counter-btn:hover {
-            background: #3a3a3a;
-            transform: scale(1.1);
-            box-shadow: 0 0 10px rgba(255,255,255,0.5);
-        }
-
-        .counter-value {
-            font-size: 28px;
-            font-weight: bold;
-            min-width: 70px;
-        }
-
-        .quick-buttons {
-            display: flex;
-            gap: 5px;
-            margin-top: 10px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .quick-btn {
-            padding: 6px 12px;
-            border: 1px solid #fff;
-            background: #1a1a1a;
-            color: #fff;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-            min-width: 50px;
-        }
-
-        .quick-btn:hover { background: #2a2a2a; }
-        .quick-btn.negative { border-color: #ff6666; color: #ff6666; }
-        .quick-btn.negative:hover { background: #330000; }
-
-        .note-input {
-            width: 100%;
-            padding: 16px;
-            border: 2px solid #fff;
-            border-radius: 6px;
-            background: #0a0a0a;
-            color: #fff;
-            font-size: 18px;
-            font-family: inherit;
-            min-height: 320px;
-            resize: none !important;
-            overflow-y: auto;
-        }
-
-        .note-input:focus {
-            outline: none;
-            border-color: #fff;
-            box-shadow: 0 0 10px rgba(255,255,255,0.3);
-        }
-
-        .save-indicator {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: #2a2a2a;
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 6px;
-            border: 1px solid #fff;
-            opacity: 0;
-            transition: opacity 0.3s;
-            z-index: 1000;
-            box-shadow: 0 0 15px rgba(255,255,255,0.3);
-        }
-
-        .save-indicator.show { opacity: 1; }
-    </style>
+    <link rel="stylesheet" href="StyleBg.css">
+    <script src="ScriptBg.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
             <div class="sidebar-header">
-                <h1>Leaf</h1>
+                <h1>🍃</h1>
             </div>
             <div class="tab-buttons">
-                <button class="tab-btn active" onclick="switchTab('counters')">Calculator</button>
-                <button class="tab-btn" onclick="switchTab('notes')">Notes</button>
+                <button class="tab-btn active" onclick="switchTab('counters')">🧮</button>
+                <button class="tab-btn" onclick="switchTab('notes')">📒</button>
             </div>
         </div>
 
         <div class="main-content">
             <div id="counters" class="tab-content active">
-                <button class="add-player-btn" onclick="addPlayer()">+ Добавить игрока</button>
+                <button class="add-player-btn" onclick="addPlayer()">+ Add player</button>
                 <div id="players-container"></div>
             </div>
 
@@ -320,169 +34,7 @@
         </div>
     </div>
 
-    <div class="save-indicator" id="saveIndicator">Сохранено Checkmark</div>
+    <div class="save-indicator" id="saveIndicator">Saved ✓</div>
 
-    <script>
-        let players = [];
-
-        function loadData() {
-            const saved = localStorage.getItem('gameTrackerData');
-            if (saved) {
-                players = JSON.parse(saved);
-            }
-        }
-
-        function saveData() {
-            localStorage.setItem('gameTrackerData', JSON.stringify(players));
-            const indicator = document.getElementById('saveIndicator');
-            indicator.classList.add('show');
-            setTimeout(() => indicator.classList.remove('show'), 1500);
-        }
-
-        function switchTab(tabName) {
-            document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active'));
-            document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-            document.getElementById(tabName).classList.add('active');
-            event.currentTarget.classList.add('active');
-
-            if (tabName === 'notes') renderNotes();
-        }
-
-        function addPlayer() {
-            const newPlayer = {
-                id: Date.now(),
-                name: `Игрок ${players.length + 1}`,
-                money: 0,
-                money2: 0,
-                hp: 20,
-                mana: 0,
-                note: ''
-            };
-            players.push(newPlayer);
-            saveData();
-            renderPlayers();
-        }
-
-        function deletePlayer(id) {
-            players = players.filter(p => p.id !== id);
-            saveData();
-            renderPlayers();
-            renderNotes();
-        }
-
-        function updateCounter(id, field, delta) {
-            const p = players.find(x => x.id === id);
-            if (p) {
-                p[field] = Math.max(0, p[field] + delta);
-                saveData();
-                renderPlayers();
-            }
-        }
-
-        function updatePlayerName(id, value) {
-            const p = players.find(x => x.id === id);
-            if (p) {
-                p.name = value.trim() || `Игрок ${players.indexOf(p) + 1}`;
-                saveData();
-                renderNotes();
-            }
-        }
-
-        function updateNote(id, value) {
-            const p = players.find(x => x.id === id);
-            if (p) {
-                p.note = value;
-                saveData();
-            }
-        }
-
-        function renderPlayers() {
-            const container = document.getElementById('players-container');
-            container.innerHTML = players.map(p => `
-                <div class="player-card">
-                    <div class="player-header">
-                        <input type="text" class="player-name" value="${p.name}"
-                               oninput="updatePlayerName(${p.id}, this.value)" placeholder="Имя игрока">
-                        <button class="delete-btn" onclick="deletePlayer(${p.id})">Удалить</button>
-                    </div>
-                    <div class="counters">
-                        <div class="counter">
-                            <div class="counter-label yellow">Деньги</div>
-                            <div class="counter-controls">
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'money',-1)">Minus</button>
-                                <span class="counter-value">${p.money}</span>
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'money',1)">Plus</button>
-                            </div>
-                            <div class="quick-buttons">
-                                <button class="quick-btn negative" onclick="updateCounter(${p.id},'money',-100)">-100</button>
-                                <button class="quick-btn negative" onclick="updateCounter(${p.id},'money',-5)">-5</button>
-                                <button class="quick-btn" onclick="updateCounter(${p.id},'money',5)">+5</button>
-                                <button class="quick-btn" onclick="updateCounter(${p.id},'money',100)">+100</button>
-                            </div>
-                        </div>
-                        <div class="counter">
-                            <div class="counter-label green">Кристаллы</div>
-                            <div class="counter-controls">
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'money2',-1)">Minus</button>
-                                <span class="counter-value">${p.money2}</span>
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'money2',1)">Plus</button>
-                            </div>
-                            <div class="quick-buttons">
-                                <button class="quick-btn negative" onclick="updateCounter(${p.id},'money2',-100)">-100</button>
-                                <button class="quick-btn negative" onclick="updateCounter(${p.id},'money2',-5)">-5</button>
-                                <button class="quick-btn" onclick="updateCounter(${p.id},'money2',5)">+5</button>
-                                <button class="quick-btn" onclick="updateCounter(${p.id},'money2',100)">+100</button>
-                            </div>
-                        </div>
-                        <div class="counter">
-                            <div class="counter-label red">HP</div>
-                            <div class="counter-controls">
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'hp',-1)">Minus</button>
-                                <span class="counter-value">${p.hp}</span>
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'hp',1)">Plus</button>
-                            </div>
-                        </div>
-                        <div class="counter">
-                            <div class="counter-label blue">Мана</div>
-                            <div class="counter-controls">
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'mana',-1)">Minus</button>
-                                <span class="counter-value">${p.mana}</span>
-                                <button class="counter-btn" onclick="updateCounter(${p.id},'mana',1)">Plus</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            `).join('');
-        }
-
-        function renderNotes() {
-            const container = document.getElementById('notes-container');
-            if (players.length === 0) {
-                container.innerHTML = '<p style="text-align:center; margin-top:50px; font-size:20px;">Нет игроков. Добавьте их во вкладке «Счётчики»</p>';
-                return;
-            }
-            container.innerHTML = players.map(p => `
-                <div class="player-card">
-                    <div style="font-size:24px; font-weight:bold; margin-bottom:15px;">${p.name}</div>
-                    <textarea class="note-input" placeholder="Заметки..."
-                              oninput="updateNote(${p.id}, this.value)">${p.note}</textarea>
-                </div>
-            `).join('');
-        }
-
-        // === ЗАПУСК ===
-        document.addEventListener('DOMContentLoaded', () => {
-            loadData();
-
-            // Отрисовываем то, что сейчас активно
-            if (document.getElementById('counters').classList.contains('active')) {
-                renderPlayers();
-            }
-
-            if (players.length === 0) {
-                addPlayer();
-            }
-        });
-    </script>
 </body>
 </html>
