--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Трекер игры">
-    <title>Трекер настольной игры</title>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Game Tracker">
+    <title>Tabletop Game Tracker</title>
     <style>
         * {
             margin: 0;
@@ -20,6 +20,10 @@
             height: 100vh;
             overflow: hidden;
             -webkit-text-size-adjust: 100%;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
         }
 
         @media screen and (max-width: 2400px) and (min-width: 1600px) {
@@ -31,6 +35,8 @@
         .container {
             display: flex;
             height: 100vh;
+            height: 100dvh;
+            overflow: hidden;
         }
 
         .sidebar {
@@ -77,7 +83,7 @@
         }
 
         .tab-btn {
-            padding: 20px 15px;
+            padding: 15px;
             margin: 5px;
             border: 1px solid #ffffff;
             background: #1a1a1a;
@@ -89,11 +95,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            aspect-ratio: 1;
         }
 
         @media screen and (max-width: 2400px) and (min-width: 1600px) {
             .tab-btn {
-                padding: 25px 20px;
+                padding: 20px;
                 font-size: 42px;
                 margin: 8px;
             }
@@ -114,6 +121,7 @@
             flex: 1;
             padding: 30px;
             overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         @media screen and (max-width: 2400px) and (min-width: 1600px) {
@@ -293,8 +301,8 @@
         }
 
         .counter-label.blue {
-            color: #00ffff;
-            text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;
+            color: #0066ff;
+            text-shadow: 0 0 10px #0066ff, 0 0 20px #0066ff;
         }
 
         .counter-controls {
@@ -472,7 +480,7 @@
 
         <div class="main-content">
             <div id="counters" class="tab-content active">
-                <button class="add-player-btn" onclick="addPlayer()">+ Добавить игрока</button>
+                <button class="add-player-btn" onclick="addPlayer()">+ Add Player</button>
                 <div id="players-container"></div>
             </div>
 
@@ -482,7 +490,7 @@
         </div>
     </div>
 
-    <div class="save-indicator" id="saveIndicator">Сохранено ✓</div>
+    <div class="save-indicator" id="saveIndicator">Saved ✓</div>
 
     <script>
         let players = [];
@@ -529,10 +537,10 @@
             const playerNumber = players.length + 1;
             const newPlayer = {
                 id: Date.now(),
-                name: `Игрок ${playerNumber}`,
+                name: `Player ${playerNumber}`,
                 money: 0,
                 money2: 0,
-                hp: 20,
+                hp: 0,
                 mana: 0,
                 note: ''
             };
@@ -568,7 +576,7 @@
         function updatePlayerName(id, value) {
             const player = players.find(p => p.id === id);
             if (player) {
-                player.name = value || `Игрок ${players.indexOf(player) + 1}`;
+                player.name = value || `Player ${players.indexOf(player) + 1}`;
                 saveData();
                 renderNotes();
             }
@@ -584,13 +592,13 @@
                             class="player-name" 
                             value="${player.name}" 
                             oninput="updatePlayerName(${player.id}, this.value)"
-                            placeholder="Имя игрока"
+                            placeholder="Player name"
                         />
-                        <button class="delete-btn" onclick="deletePlayer(${player.id})">Удалить</button>
+                        <button class="delete-btn" onclick="deletePlayer(${player.id})">Delete</button>
                     </div>
                     <div class="counters">
                         <div class="counter">
-                            <div class="counter-label yellow">Деньги</div>
+                            <div class="counter-label yellow">Money</div>
                             <div class="counter-controls">
                                 <button class="counter-btn" onclick="updateCounter(${player.id}, 'money', -1)">−</button>
                                 <span class="counter-value">${player.money}</span>
@@ -604,7 +612,7 @@
                             </div>
                         </div>
                         <div class="counter">
-                            <div class="counter-label green">Деньги 2</div>
+                            <div class="counter-label green">Crystals</div>
                             <div class="counter-controls">
                                 <button class="counter-btn" onclick="updateCounter(${player.id}, 'money2', -1)">−</button>
                                 <span class="counter-value">${player.money2}</span>
@@ -626,7 +634,7 @@
                             </div>
                         </div>
                         <div class="counter">
-                            <div class="counter-label blue">Мана</div>
+                            <div class="counter-label blue">Mana</div>
                             <div class="counter-controls">
                                 <button class="counter-btn" onclick="updateCounter(${player.id}, 'mana', -1)">−</button>
                                 <span class="counter-value">${player.mana}</span>
@@ -641,7 +649,7 @@
         function renderNotes() {
             const container = document.getElementById('notes-container');
             if (players.length === 0) {
-                container.innerHTML = '<p style="color: #ffffff; text-align: center; margin-top: 50px;">Нет игроков. Добавьте игроков на вкладке "Счетчики"</p>';
+                container.innerHTML = '<p style="color: #ffffff; text-align: center; margin-top: 50px;">No players. Add players on the Counters tab</p>';
                 return;
             }
             container.innerHTML = players.map(player => `
@@ -652,7 +660,7 @@
                     <div class="notes-section">
                         <textarea 
                             class="note-input" 
-                            placeholder="Введите заметки для этого игрока..."
+                            placeholder="Enter notes for this player..."
                             oninput="updateNote(${player.id}, this.value)"
                         >${player.note}</textarea>
                     </div>
