--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Game Tracker">
     <title>Tabletop Game Tracker</title>
     <style>
@@ -12,18 +12,16 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+            background: #0a0a0a;
             height: 100vh;
             overflow: hidden;
             -webkit-text-size-adjust: 100%;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
         }
 
         @media screen and (max-width: 2400px) and (min-width: 1600px) {
@@ -35,8 +33,11 @@
         .container {
             display: flex;
             height: 100vh;
-            height: 100dvh;
-            overflow: hidden;
+        }
+
+        button, input, textarea {
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
         }
 
         .sidebar {
