--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             height: 100vh;
             overflow: hidden;
             -webkit-text-size-adjust: 100%;
+            position: fixed;
         }
 
         @media screen and (max-width: 2400px) and (min-width: 1600px) {
@@ -676,3 +677,4 @@
     </script>
 </body>
 </html>
+
